WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187553
REGRESSION (
r232356
): After zooming a page in and out, it's possible to temporarily have missing tiles (google.com, apple.com)
https://bugs.webkit.org/show_bug.cgi?id=187553
Summary
REGRESSION (r232356): After zooming a page in and out, it's possible to tempo...
Antti Koivisto
Reported
2018-07-11 07:02:17 PDT
We ignore zoom scale from UI process if it doesn't match the last remote layer tree transaction. However nothing guarantees that we receive the real scale again until user interacts with the page. After
r232356
this can cause visibly missing tiles, before the problem was covered by creating too many of them.
Attachments
patch
(4.15 KB, patch)
2018-07-12 05:27 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
patch
(4.15 KB, patch)
2018-07-12 11:41 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2018-07-12 05:08:03 PDT
<
rdar://problem/30404627
>
Antti Koivisto
Comment 2
2018-07-12 05:08:33 PDT
I mean <
rdar://problem/41863803
>
Antti Koivisto
Comment 3
2018-07-12 05:27:19 PDT
Created
attachment 344839
[details]
patch
Simon Fraser (smfr)
Comment 4
2018-07-12 11:26:57 PDT
Comment on
attachment 344839
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344839&action=review
> Source/WebKit/WebProcess/WebPage/WebPage.h:1669 > + float m_lastTransactionPageScaleFactor { 0 };
We store page scale as a double in RemoteLayerTreeTransaction and we've certainly had bugs with float/double precision mismatch before, so should this be a double, and/or do matching with epsilon?
> Source/WebKit/WebProcess/WebPage/WebPage.h:1670 > + uint64_t m_lastTransactionIDWithScaleChange { 0 };
I wish we had a typedef for transactionIDs :(
Antti Koivisto
Comment 5
2018-07-12 11:41:55 PDT
Created
attachment 344865
[details]
patch
WebKit Commit Bot
Comment 6
2018-07-12 13:11:37 PDT
Comment on
attachment 344865
[details]
patch Clearing flags on attachment: 344865 Committed
r233780
: <
https://trac.webkit.org/changeset/233780
>
WebKit Commit Bot
Comment 7
2018-07-12 13:11:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug